Agregado de portfolio y correcciones/mejoras varias

--- a/index.html
+++ b/index.html
@@ -6,17 +6,6 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>CV de Ramiro Alejo Yaben</title>
-    <script>
-    function linkBT() {
-        window.open(`https://www.softpedia.com/get/Office-tools/Other-Office-Tools/BasicTables.shtml`, `_blank`)
-    }
-    function linkVS() {
-        window.open(`https://www.softpedia.com/get/Desktop-Enhancements/Other-Desktop-Enhancements/Virtual-Shortcuts.shtml`, `_blank`)
-    }
-    function linkSUAM() {
-        window.open(`https://www.softpedia.com/get/System/Launchers-Shutdown-Tools/StartUp-Actions-Manager.shtml`, `_blank`)
-    }
-    </script>
 </head>
 
 <body>
@@ -31,7 +20,8 @@
                 <h3>Navegación</h3>
                 <ul id="lista-lateral">
                     <li><a class="item-lateral" href="#datos-personales" class="link-navegacion">Datos personales</a></li>
-                    <li><a class="item-lateral" href="#quien-soy" class="link-navegacion">Quién soy</a></li>
+                    <li><a class="item-lateral" href="#portfolio" class="link-navegacion">Portfolio principal</a></li>
+                    <li><a class="item-lateral" href="#quien-soy" class="link-navegacion">Perfil</a></li>
                     <li><a class="item-lateral" href="#formacion-academica" class="link-navegacion">Formación académica</a></li>
                     <li><a class="item-lateral" href="#experiencia-laboral" class="link-navegacion">Experiencia laboral</a></li>
                 </ul>
@@ -44,29 +34,6 @@
                     <li>Iconos de teléfono e email creados por <a class="item-lateral" href="https://www.flaticon.com/authors/dave-gandy" target="_blank">Dave Gandy</a> de <a class="item-lateral" href="https://www.flaticon.com" target="_blank">www.flaticon.com</a>.</li>
                     <li>Iconos del portfolio creados por <a class="item-lateral" href="https://www.acamica.com" target="_blank">Acámica</a>.</li>
                 </ul>
-            </div>
-        </div>
-
-        <div id="lateral-inferior" class="interior">
-            <!-- <div id="portfolio">
-                <h3>Portfolio de web apps (en curso)</h3>
-                <div class="flexbox iconos-portfolio seccion-lateral">
-                    <img class="icono-portfolio" title="CV Online" src="img/cv-icon.png" alt="CV">
-                    <img class="icono-portfolio" title="Rompecabezas" src="img/rompecabezas-icon.png" alt="Rompecabezas">
-                    <img class="icono-portfolio" title="Pixel Art" src="img/pixel-art-icon.png" alt="Pixel art">
-                    <img class="icono-portfolio" title="Ciudad Zombie" src="img/ciudad-zombie-icon.png" alt="Ciudad zombie">
-                    <img class="icono-portfolio" title="Rompecabezas recargado" src="img/recargado-icon.png" alt="Recargado">
-                    <img class="icono-portfolio" title="Mapa interactivo" src="img/mapa-interactivo-icon.png" alt="Mapa">
-                    <img class="icono-portfolio" title="Peli vs peli" src="img/peli-vs-peli-icon.png" alt="Peli vs peli">
-                    <img class="icono-portfolio" title="Qué veo hoy" src="img/que-veo-icon.png" alt="Qué veo">
-                </div>
-                <hr class="divisor-fuerte"> -->
-                <h3>Portfolio de desktop apps</h3>
-                <div class="flexbox iconos-portfolio seccion-lateral">
-                    <img onclick="linkBT()" class="icono-portfolio" title="BasicTables" src="img/basictables.png" alt="BasicTables">
-                    <img onclick="linkSUAM()" class="icono-portfolio" title="StartUp Actions Manager" src="img/suam.png" alt="StartUp Actions Manager">
-                    <img onclick="linkVS()" class="icono-portfolio" title="Virtual Shortcuts" src="img/virtualshortcuts.png" alt="Virtual Shortcuts">
-                </div>
             </div>
         </div>
     </div>
@@ -95,7 +62,7 @@
                         uso de Slack, Trello y GitHub por terminal, y Linux.</p>
                     </div></section>
                 </div>
-                <h4>Contacto</h4>
+                <h4>Contacto e info</h4>
             </div>
             <div id="contacto" class="flexbox seccion-principal">
                 <div class="combo-contacto" id="contacto-teléfono">
@@ -104,7 +71,7 @@
                 </div>
                 <div class="combo-contacto" id="contacto-email">
                     <img class="icono-contacto" src="img/email.png" alt="Email">
-                    <p><a class="link-referencia" href="mailto:ramiroyaben@gmail.com" title="Enviarme un email">ramiroyaben</a></p>
+                    <p><a class="link-referencia" href="mailto:ramiroyaben@gmail.com" title="Enviarme un email" target="_blank">ramiroyaben</a></p>
                 </div>
                 <div class="combo-contacto" id="contacto-skype">
                     <img class="icono-contacto" src="img/skype.png" alt="Skype">
@@ -121,9 +88,77 @@
             </div>
             <hr class="divisor-fuerte">
             <div class="seccion-principal" id='portfolio'>
-                <h2>Portfolio</h2>
-                <div class='flexbox iconos-portfolio'>
-                    
+                <h2>Portfolio principal</h2>
+                <div style='display:grid;grid-template-columns:1fr 1fr 1fr 1fr;text-align:center;margin-top:4%;'>
+                    <img src='img/boggle-instapad.png' alt='boggle-instapad' style='margin:auto;'>
+                    <img src='img/insumos.png' alt='boggle-instapad' style='margin:auto;'>
+                    <img src='img/8PG.png' alt='boggle-instapad' width='106px' style='margin:auto;'>
+                    <img src='img/suam.png' alt='8PG' style='margin:auto;'>
+
+                    <a href='https://github.com/ryaben/boggle-instapad' target='_blank'><h3>Boggle <br>Instapad</h3></a>
+                    <a href='https://github.com/ryaben/gestionamiento-insumos' target='_blank'><h3>Gestionamiento <br>de insumos</h3></a>
+                    <a href='https://github.com/ryaben/8PG' target='_blank'><h3>8PG</h3></a>
+                    <a href='https://github.com/ryaben/startup-actions-manager' target='_blank'><h3>StartUp Actions <br>Manager</h3></a>
+
+                    <div style='display:flex;justify-content:space-evenly;'>
+                        <div style="text-align:left;font-size:0.9em;">
+                            HTML<br>
+                            CSS<br>
+                            JS<br>
+                            Librerías
+                        </div>
+                        <div style="text-align:right;font-size:small;">
+                            ⚫⚫⚫⚪⚪<br>
+                            ⚫⚫⚫⚫⚪<br>
+                            ⚫⚫⚫⚫⚪<br>
+                            ⚫⚫⚫⚪⚪
+                        </div>
+                    </div>
+                    <div style='display:flex;justify-content:space-evenly;'>
+                        <div style="text-align:left;font-size:0.9em;">
+                            HTML<br>
+                            CSS<br>
+                            JS<br>
+                            Librerías
+                        </div>
+                        <div style="text-align:right;font-size:small;">
+                            ⚫⚫⚫⚪⚪<br>
+                            ⚫⚫⚫⚪⚪<br>
+                            ⚫⚫⚫⚫⚪<br>
+                            ⚫⚫⚫⚫⚪
+                        </div>
+                    </div>
+                    <div style='display:flex;justify-content:space-evenly;'>
+                        <div style="text-align:left;font-size:0.9em;">
+                            HTML<br>
+                            CSS<br>
+                            JS<br>
+                            Librerías
+                        </div>
+                        <div style="text-align:right;font-size:small;">
+                            ⚫⚫⚫⚫⚪<br>
+                            ⚫⚫⚫⚫⚪<br>
+                            ⚫⚫⚫⚫⚪<br>
+                            ⚫⚫⚫⚫⚪
+                        </div>
+                    </div>
+                    <div style='display:flex;justify-content:space-evenly;'>
+                        <div style="text-align:left;font-size:0.9em;">
+                            VB 6.0<br>
+                            Diseño<br>
+                            Código
+                        </div>
+                        <div style="text-align:right;font-size:small;">
+                            <br>
+                            ⚫⚫⚫⚪⚪<br>
+                            ⚫⚫⚫⚪⚪
+                        </div>
+                    </div>
+
+                    <a href='https://ryaben.github.io/boggle-instapad/' target='_blank'><p>✅ Live deploy v1.1</p></a>
+                    <a href='https://ryaben.github.io/gestionamiento-insumos/' target='_blank'><p>✅ Live deploy v1.0</p></a>
+                    <a href='https://ryaben.github.io/8PG/' target='_blank'><p>✅ Live deploy alpha</p></a>
+                    <p>❌ De escritorio </p>
                 </div>
             </div>
             <hr class="divisor-fuerte">
@@ -136,9 +171,9 @@
                 <p>
                 Busco un lugar en el cual pueda aprender y desarrollarme profesionalmente, donde ambas partes se valoren recíprocamente por sus cualidades.
                 </p>
-                <!--<p>
+                <p>
                 Muy deportivo y competitivo, principalmente dentro del ámbito del fútbol. Me encanta cantar, escribir y sacar fotos extrañas aunque no sea el mejor en eso. Ávido cinéfilo y consumidor de series. Con ansias de poder seguir viajando y descubriendo las culturas, comidas y paisajes que tiene el mundo.
-                </p>-->
+                </p>
                 </section>
             </div>
             <hr class="divisor-fuerte">
